# claude-marketplace

./: .gitignore  .markdownlint.json  API_TEST_PLAN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GITHUB_ERRORS.md  IMAGE_GEN_PLAN.md  IMPLEMENTATION_PLAN.md  LAB_NOTEBOOK.md  LEARNINGS.md  PLAN-RESEARCH-UI.md  PROGRESS.md  QUICK-REFERENCE.md  README.md  RECOMMENDATIONS.md  REVIEW.md  SECURITY.md  SHIP_GITEA_PLAN.md  TROUBLESHOOTING-20260117.md  TROUBLESHOOTING.md  WORKFLOWS.md  gap-analysis-2026-04-30.md  pyproject.toml  ruff.toml
.claude/: ralph-loop.local.md
.claude-plugin/: marketplace.json
.claude/commands/: arch-review.md  define-questions.md  next-step.md  transcript-analysis.md  troy-statusline.md
.claude/skills/: ship.md
.github/workflows/: test.yml  validate.yml
docs/: PLUGIN-DEVELOPMENT.md
docs/adr/: 0001-skill-directory-structure.md  0002-python-tools-from-source.md  0003-bitwarden-secrets.md  0004-plugin-encapsulation.md
docs/archive/: IMPLEMENTATION_PLAN-v5.md  LEARNINGS-v5.md  RECOMMENDATIONS-v5.md  RECOMMENDATIONS.md
evals/: README.md
evals/commands/: analyze-transcript.eval.md  ask-questions.eval.md  assess-document.eval.md  bump-version.eval.md  clean-repo.eval.md  consolidate-documents.eval.md  convert-markdown.eval.md  create-plan.eval.md  define-questions.eval.md  develop-image-prompt.eval.md  finish-document.eval.md  implement-plan.eval.md  new-command.eval.md  new-skill.eval.md  plan-improvements.eval.md  plan-next.eval.md  remove-ip.eval.md  review-arch.eval.md  review-intent.eval.md  review-pr.eval.md  scaffold-plugin.eval.md  test-project.eval.md  validate-plugin.eval.md
evals/eval-run-output/: api-design-consolidated-20260112-090400.md  image-prompt-sample-prd-20260112-090600.md  (+2 more)
plugins/bpmn-plugin/tools/bpmn2drawio/: README.md  VISUAL_TESTING_WORKFLOW.md  pyproject.toml  requirements-dev-lock.txt  requirements-lock.txt
plugins/bpmn-plugin/tools/bpmn2drawio/src/bpmn2drawio/: __init__.py  __main__.py  boundary_positioner.py  cli.py  config.py  constants.py  converter.py  exceptions.py  generator.py  icons.py  lane_organizer.py  layout.py  markers.py  models.py  parser.py  position_resolver.py  recovery.py  routing.py  styles.py  swimlanes.py  themes.py  validation.py  waypoints.py
plugins/bpmn-plugin/tools/bpmn2drawio/tests/: __init__.py  test_boundary_positioner.py  test_cli.py  test_complex_scenarios.py  test_config.py  test_converter.py  test_coverage_gaps.py  test_generator.py  test_icons.py  test_integration.py  test_lane_organizer.py  test_layout.py  test_markers.py  test_models.py  test_parser.py  test_position_resolver.py  test_recovery.py  test_routing.py  test_styles.py  test_swimlanes.py  test_themes.py  test_validation.py  test_waypoints.py
plugins/bpmn-plugin/tools/bpmn2drawio/tests/fixtures/: all_events.bpmn  all_gateways.bpmn  all_tasks.bpmn  brand-config.yaml  complex_layout.bpmn  complex_layout.drawio  conditional_flows.bpmn  disconnected.bpmn  empty.bpmn  invalid_refs.bpmn  minimal.bpmn  mixed_di.bpmn  no_di.bpmn  simple_process.bpmn  single_pool.bpmn  swimlanes.bpmn  very_complex.bpmn  very_complex.drawio  with_di.bpmn  with_gateway.bpmn
plugins/bpmn-plugin/tools/bpmn2drawio/tests/visual/: VISUAL_TEST_REPORT.md  test_cf_03_criss_cross_messages.bpmn  test_combined_complex.bpmn  test_cr_05_cross_lane_flows.bpmn  test_gw_04_nested_gateways.bpmn  test_ml_03_many_lanes.bpmn  test_sp_04_subprocess_gateway.bpmn
plugins/bpmn-plugin/tools/bpmn2drawio/tests/visual/output/: test_cf_03_criss_cross_messages.drawio  test_combined_complex.drawio  test_cr_05_cross_lane_flows.drawio  test_gw_04_nested_gateways.drawio  test_ml_03_many_lanes.drawio  test_sp_04_subprocess_gateway.drawio
plugins/personal-plugin/tools/feedback-docx-generator/: pyproject.toml  requirements-lock.txt
plugins/personal-plugin/tools/feedback-docx-generator/src/feedback_docx_generator/: __init__.py  __main__.py
plugins/personal-plugin/tools/feedback-docx-generator/tests/: __init__.py  conftest.py  test_generator.py  test_main.py
plugins/personal-plugin/tools/research-orchestrator/: .env.example  API_TEST_PLAN.md  README.md  pyproject.toml  requirements-dev-lock.txt  requirements-lock.txt
plugins/personal-plugin/tools/research-orchestrator/src/research_orchestrator/: __init__.py  __main__.py  bug_reporter.py  cli.py  config.py  model_discovery.py  models.py  orchestrator.py  ui.py
plugins/personal-plugin/tools/research-orchestrator/src/research_orchestrator/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py
plugins/personal-plugin/tools/research-orchestrator/tests/: __init__.py  test_bug_reporter.py  test_cli.py  test_config.py  test_model_discovery.py  test_models.py  test_orchestrator.py  test_providers.py  test_ui.py
plugins/personal-plugin/tools/visual-explainer/: README.md  pyproject.toml  requirements-dev-lock.txt  requirements-lock.txt
plugins/personal-plugin/tools/visual-explainer/src/visual_explainer/: __init__.py  __main__.py  api_setup.py  cli.py  concept_analyzer.py  config.py  image_evaluator.py  image_generator.py  infographic_builder.py  models.py  output.py  page_templates.py  prompt_generator.py  prompt_refiner.py  style_loader.py
plugins/personal-plugin/tools/visual-explainer/styles/: README.md  professional-clean.json  professional-sketch.json
plugins/personal-plugin/tools/visual-explainer/tests/: __init__.py  conftest.py  test_api_setup.py  test_cli_extended.py  test_concept_analyzer.py  test_config.py  test_image_evaluator.py  test_image_generator.py  test_infographic_builder.py  test_integration.py  test_models.py  test_output.py  test_page_templates.py  test_prompt_generator.py  test_prompt_refiner.py  test_style_loader.py
reports/: research-claude-20260117-182959.md  research-claude-20260117-184822.md  research-claude-20260117-191533.md  research-claude-20260117-193143.md  research-gemini-20260117-193143.md
schemas/: README.md  answers.json  command.json  plugin.json  questions.json
scripts/: generate-help.py  pre-commit  update-readme.py
tests/: __init__.py  conftest.py
(+208 files in other folders)
