[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feedback-docx-generator"
version = "1.0.0"
description = "Generate professional feedback assessment .docx documents from structured JSON input"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["feedback", "assessment", "docx", "document-generation"]
dependencies = [
    "python-docx>=1.0.0",
]

[project.scripts]
feedback-docx-generator = "feedback_docx_generator.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
