[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feedback-docx-generator"
version = "1.0.0"
description = "Generate professional feedback assessment .docx documents from structured JSON input"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["feedback", "assessment", "docx", "document-generation"]
dependencies = [
    "python-docx>=1.0.0",
]

[project.scripts]
feedback-docx-generator = "feedback_docx_generator.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
