[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-orchestrator"
version = "1.0.0"
description = "Orchestrate parallel deep research across multiple LLM providers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["research", "llm", "ai", "orchestration", "anthropic", "openai", "google"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0,<2.0.0",
    "openai>=1.50.0,<3.0.0",
    "google-genai>=1.0.0,<2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "tenacity>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
docx = [
    "python-docx>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "respx>=0.21.0",
    "mypy>=1.8.0",
]

[project.scripts]
research-orchestrator = "research_orchestrator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--cov=research_orchestrator --cov-report=term-missing"

[tool.coverage.run]
source = ["src/research_orchestrator"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
